# Toys_ai_managers

./: .gitignore  chat.csv  pyproject.toml
AI_managers_sales_toys/: Dockerfile  chanks_file.py  main.py  qwerty.py  requirements.txt
AI_managers_sales_toys/work_with_database_MongoDB/: config.py  mongodb_messages.py
AI_managers_sales_toys/work_with_database_PostgreSQL/: config.py  database.py  main.py  models.py
AI_managers_sales_toys/work_with_database_PostgreSQL/chank_data/: index.json  products_part_1.json  products_part_2.json  products_part_3.json  products_part_4.json  products_part_5.json  products_part_6.json  products_part_7.json  products_part_8.json  products_part_9.json
AI_managers_sales_toys/work_with_database_PostgreSQL/utils/: chank_all_data.py  dowloand_product_data.py  main_create_article.py  (+1 more)
AI_managers_sales_toys/work_with_instagram/: ai_handler.py  config.py  main.py  main_instagram.py  message_handler.py  sandpuls_handler.py  utils.py  webhook_handler.py
AI_managers_sales_toys/work_with_service_for_save_product_images/: main_cloudinary.py
AI_managers_sales_toys/work_with_telegram/: Promt_for_main.txt  Promt_for_main_v3.txt  Promt_for_stoc_version_tg_bot_sales_animals_items.txt  main.py  main_old.py  main_tg_salesman.py  main_v3.py  main_v3_1.py
toys_e_commerce/: manage.py
toys_e_commerce/orders/: admin.py  models.py  urls.py  views.py
toys_e_commerce/products/: admin.py  models.py  views.py
toys_e_commerce/toys_e_commerce/: asgi.py  settings.py  urls.py  wsgi.py
toys_e_commerce/users/: admin.py  models.py
(+16 files in other folders)
